# PowerShift

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  azure-pipelines.yml  cspell.json  dashboard.py  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt  seed.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  frontend-ci.yml  release.yml
EV_profil_ameliore_v2/: ANALYSE_COMPARATIVE_EV.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
app/: .dockerignore  Dockerfile  config.py  main.py
app/api/v1/: auth.py  dependencies.py  router.py
app/application/dtos/: demand_dto.py  network_dto.py  referential_dto.py  supply_dto.py
app/application/nuclear/: schemas.py  use_cases.py
app/application/services/: export_service.py  referential_service.py  simulation_service.py
app/application/wind/: __init__.py  schemas.py  use_cases.py
app/domain/entities/: base_component.py
app/domain/interfaces/: demand_repository.py  load_profile_provider.py  network_repository.py  pv_profile_repository.py  simulation_persistence_repository.py  simulation_repository.py  supply_repository.py
app/domain/nuclear/: entities.py  exceptions.py  ports.py  services.py
app/domain/simulation/: exceptions.py
app/domain/use_cases/: get_referential.py  preview_simulation.py  run_simulation.py
app/domain/wind/: __init__.py  entities.py  exceptions.py  ports.py  services.py
app/infrastructure/: logging.py
app/infrastructure/cache/: weather_cache.py
app/infrastructure/db/: connection.py  init_db.py
app/infrastructure/nuclear/: repository.py
app/infrastructure/secrets/: azure_key_vault.py  settings.py
app/infrastructure/simulation/: network_builder.py  pypsa_adapter.py
app/infrastructure/wind/: __init__.py  models.py  pypsa_wind_adapter.py  repository.py
backups/: neondb_backup_2026-04-10_11-45.tar
docs/: commits-louis-lenouvel.md  commits-sarah-sron.md  wiki-azure-deploy.md  wiki-azure-vm-deploy.md  wiki-frontend.md  wiki-legacy-azure-deploy.md  wiki-local-setup.md  wiki-open-meteo.md  wiki-simulation.md
docs/superpowers/plans/: 2026-04-26-azure-to-github-docker-postgres.md
docs/superpowers/specs/: 2026-04-07-simulation-url-sharing-design.md
energy-dashboard/: .dockerignore  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
energy-dashboard/app/: app.vue
energy-dashboard/app/components/: KpiCard.vue  NetworkCanvas.vue  OnboardingTutorial.vue  app_footer.vue
energy-dashboard/app/composables/: api.ts  useAssetColors.ts  useChartTheme.ts  useEChartsTheme.ts  useLiveRunner.ts  (+4 more)
energy-dashboard/i18n/: en.json  fr.json
front_end/: index.css  index.html
front_end/.ipynb_checkpoints/: index-checkpoint.html
scripts/: create_weather_snapshot.sql  dump_weather_profile.py  ingest_knmi_wind.py  ingest_weather_profile.py  install-agent.sh  migrate_simulation_enhancements.sql  seed.py  seed_nuclear.py  seed_weather_profile.sql  seed_wind.py
tests/: test_health.py  test_pypsa_simulation.py
tests/api/: conftest.py  test_auth.py  test_demand_api.py  test_demand_profile_api.py  test_health_api.py  test_network_api.py  test_request_id.py  test_simulation_api.py  test_simulation_export.py  test_simulation_ws.py  test_supply_api.py
tests/bdd/: conftest.py
tests/integration/: test_wind_module.py
tests/simulation/: test_multibus.py  test_solar_p_max_pu.py
tests/ui/: test_swagger_ui.py
tests/unit/: test_custom_profile_merge.py  test_export_service.py  test_logging.py  test_optimization_strategies.py  test_simulation_service_save.py  test_weather_cache.py  test_weather_snapshot_model.py  test_weather_validation.py  test_wind_power_calculator.py
(+150 files in other folders)
